fixed checkbox bug, hLine,vLine issues, updated bar chart for level 2, added scrollbars for cbxContainer and barCanvas.
git-svn-id: svn://107.170.10.188:8080/Semoss/trunk@158 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

--- a/html/MHS-RDFSemossCharts/app/css/heatmap-vendor.css
+++ b/html/MHS-RDFSemossCharts/app/css/heatmap-vendor.css
@@ -18,7 +18,6 @@
       
   
       text {
-        font-size: 9pt;
         font-family: arial, courier;
         fill: #000;
       }
@@ -32,11 +31,11 @@
       }
       
       .xAxis {
-	font-size: 9px;
+	font-size: 11px;
 	width: 4px;
       }
       .yAxis {
-	font-size: 9px;
+	font-size: 11px;
 	width: 4px;
 	
       }
@@ -165,6 +164,9 @@
       padding-top: 2px;
       margin-top: 0px;
       margin-bottom: 10px;
+      height: 200px;
+      overflow-x: hidden;
+      overflow-y: scroll;
     }
     
     .description {
@@ -183,7 +185,13 @@
     
     #checkboxes {
       margin-top: 10px;
-      margin-bottom: 0px;
+      margin-bottom: 10px;
+      background-color: white;
+      border: 1px solid #ccc;
+      padding: 5px;
+      height: 200px;
+      overflow-x: hidden;
+      overflow-y: scroll;
     }
     
     .btn a, .btn a:hover {
@@ -201,7 +209,10 @@
   .cbxContainer {
     margin-top: 0px;
   }
-  
+
+  .cbx {
+    /*background-color: red; This was to test a wierd glitch with the checkboxes*/
+  }
   .cbxLabels {
     font-size: 9px;
   }
@@ -269,4 +280,12 @@
     bottom: 0px;
     right: 0px;
     background-color:white;
+}
+
+.cursor-normal {
+  cursor: default;
+}
+
+.pointer {
+  cursor: pointer;
 }
